# shortlink-rs

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
crates/console/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: main.rs
crates/front/: Cargo.toml
crates/front/src/: main.rs
crates/schedule/: Cargo.toml
crates/shortlink/: Cargo.toml
examples/front-example/: Cargo.toml
