[workspace]
members = [
    "crates/*",
    "examples/*",
]
resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
version = "0.0.1"
authors = ["https://github.com/houseme/shortlink-rs"]
edition = "2021"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
description = "A short link service system implemented by rust language"
homepage = "https://houseme.github.io/shortlink-rs/"
repository = "https://github.com/houseme/shortlink-rs.git"
documentation = "https://docs.rs/shortlink-rs/"
readme = "./README.md"
keywords = ["shortlink", "link", "web", "http", "api"]
categories = ["config", "web-programming", "development-tools", "Asynchronous", "network-programming"]

[workspace.dependencies]
chrono = { version = "0.4.31" }
base64 = "0.21"
bytes = "1"
bcrypt = "0.15.0"
jieba-rs = { version = "0.6", features = ["tfidf", "textrank"] }
salvo = { version = "0.65", features = ["default", "logging"] }
serde = { version = "1.0.188", features = [] }
shortlink-core = { path = "./crates/core" }
shortlink-console = { path = "./crates/console" }
shortlink-front = { path = "./crates/front" }
shortlink-schedule = { path = "./crates/schedule" }
shortlink = { path = "./crates/shortlink" }

tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"